<resources>
    <string name="app_name">Search Music</string>
    <string name="action_settings">Settings</string>
    <string name="album">Album</string>
    <string name="song">Song</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="search_name_song">Search by song name</string>
    <string name="search_name_album">Search by album name</string>
    <string name="search">Search</string>
    <string name="title_activity_details">Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="s_radioStationUrl">Radio station URL</string>
    <string name="s_isStreamable">Is streamable</string>
    <string name="s_collectionType">Collection type</string>
    <string name="s_amgArtistId">AMG artist ID</string>
    <string name="s_contentAdvisoryRating">Content Advisory Rating</string>
    <string name="s_copyright">Copyright</string>
    <string name="s_trackName">Track name</string>
    <string name="s_trackCensoredName">Track censored name</string>
    <string name="artworkUrl60">Artwork URL (60)</string>
    <string name="artworkUrl100">Artwork URL (100)</string>
    <string name="s_trackId">Track ID</string>
    <string name="s_kind">Kind</string>
    <string name="s_trackViewUrl">Track view URL</string>
    <string name="s_previewUrl">Preview URL</string>
    <string name="s_artworkUrl30">Artwork URL (30)</string>
    <string name="s_trackExplicitness">Track explicitness</string>
    <string name="s_discCount">Disc count</string>
    <string name="s_discNumber">Disc number</string>
    <string name="s_artworkUrl60">Artwork URL (60)</string>
    <string name="s_artworkUrl100">Artwork URL (100)</string>
    <string name="s_trackNumber">Track number</string>
    <string name="s_trackTimeMillis">Track time millis</string>
    <string name="s_trackPrice">Track price</string>
    <string name="s_collectionPrice">Collection price</string>
    <string name="s_releaseDate">Release date</string>
    <string name="s_collectionExplicitness">Collection explicitness</string>
    <string name="s_trackCount">Track count</string>
    <string name="s_country">Country</string>
    <string name="s_currency">Currency</string>
    <string name="s_primaryGenreName">Primary genre name</string>
    <string name="s_wrapperType">Wrapper type</string>
    <string name="s_artistId">Artist ID</string>
    <string name="s_collectionName">Collection name</string>
    <string name="s_collectionCensoredName">Collection censored name</string>
    <string name="s_collectionId">Collection ID</string>
    <string name="s_artistName">Artist name</string>
    <string name="s_artistViewUrl">Artist View URL</string>
    <string name="s_collectionViewUrl">Collection view URL</string>
</resources>